# cubic_solver_real

./: README.md
Cubic/: CMakeLists.txt
Cubic/cubic_ctest/: CMakeLists.txt  CMakeSettings.json
Cubic/cubic_ctest/src/: CMakeLists.txt  main.cpp
Cubic/cubic_ctest/src/src_code/: CMakeLists.txt  IndexRange.h  grid3d.cpp  grid3d.h  ndgrid.h
Cubic/cubic_lib/: CMakeLists.txt
Cubic/cubic_lib/include/cubic/: CMakeLists.txt  cubic.h
Cubic/cubic_lib/src/: CMakeLists.txt  cubic.cpp
Cubic/cubic_pybind/: CMakeLists.txt  main.cpp
Cubic/tests/: test_cubic.py  test_quadratic.py
